# inteligentny-magazyn-projekt-okno-2025

api/: .env.local  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  e2e_test.py  index.html  pyproject.toml  seed_db.py
api/app/: main.py
api/app/core/: config.py  db.py  middleware.py  security.py
api/app/models/: inventory.py  item.py  pagination.py  user.py  user_db.py  warehouse.py
api/app/repositories/: inventory_repository.py  item_repository.py  user_repository.py  warehouse_repository.py
api/app/routers/: auth.py  inventory.py  item.py  warehouse.py
api/migrations/: env.py
api/migrations/versions/: 5321645f38b1_init.py
api/src/api/: types.ts
client/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
client/requests/: getWarehouse.http  login.http  test.http
client/src/: App.tsx  index.js  main.tsx
client/src/api/: apiClient.ts  auth.ts  inventory.ts  item.ts  schema.types.ts  types.ts  warehouse.ts
client/src/components/: @  StorageItem.css  moveItemPopup.css  moveItemPopup.js  searchBar.css  searchBar.js  searchedItem.css  searchedItem.js  storageDetails.js  storageInfo.css  storageInfo.js  storageItem.js  storageItemDetails.js
client/src/components/ui/: form.tsx
client/src/contexts/: AuthContext.tsx
client/src/events/: .authorization.js.swp  authorization.js  inventory.js  items.js  warehouses.js
client/src/pages/: AuthPage.tsx  DashboardPage.tsx  ItemsPage.tsx  WarehousesPage.tsx
client/src/views/: generalView.js  loginView.js  mainView.css  mainView.js  registerView.js
(+10 files in other folders)
